# fejix

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
docs/: book.toml
include/fejix/: core.h  fejix.h  utils.h
include/fejix/runtime/: unix.h
src/: params.h
